--- a/package.json
+++ b/package.json
@@ -56,8 +56,14 @@
     "babel-runtime": "^6.3.19",
     "express": "^4.12.3",
     "history": "^1.17.0",
+    "node-sass": "^3.4.2",
+    "normalize.css": "^3.0.3",
     "react": "^0.14.6",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.6",
-    "react-router": "^1.0.3"
+    "react-router": "^1.0.3",
+    "react-toolbox": "^0.14.1",
+    "sass-loader": "^3.1.2",
+    "toolbox-loader": "0.0.3"
   }
 }
