--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "postinstall": "npm run build",
-    "server": "node server.js",
+    "start": "node server.js",
     "build": "webpack -p --progress --config webpack.production.config.js",
     "test": "nyc ava --fail-fast --verbose --require babel-register",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
@@ -52,8 +52,12 @@
   },
   "dependencies": {
     "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.8",
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-plugin-react": "^3.16.1",
     "express": "^4.12.3",
     "history": "^1.17.0",
     "node-sass": "^3.4.2",
